--- a/catalog/plugin/catalog-plugin-metacardingest-network/pom.xml
+++ b/catalog/plugin/catalog-plugin-metacardingest-network/pom.xml
@@ -49,6 +49,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
