--- a/catalog/spatial/wfs/spatial-wfs-converter/pom.xml
+++ b/catalog/spatial/wfs/spatial-wfs-converter/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>geospatial</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
