--- a/catalog/transformer/catalog-transformer-geojson-input/pom.xml
+++ b/catalog/transformer/catalog-transformer-geojson-input/pom.xml
@@ -45,6 +45,11 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>ddf.catalog.core</groupId>
