--- a/catalog/transformer/catalog-transformer-geojson-metacard/pom.xml
+++ b/catalog/transformer/catalog-transformer-geojson-metacard/pom.xml
@@ -40,6 +40,11 @@
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
