--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
@@ -139,6 +139,7 @@ org.osgi.framework.system.packages.extra = \
     org.apache.xml.serializer;uses:=\"org.xml.sax.helpers,org.xml.sax,org.apache.xml.serializer.utils,javax.xml.transform,org.w3c.dom.ls,org.w3c.dom,org.xml.sax.ext,org.apache.xml.serializer.dom3\";version=2.7.2, \
     org.apache.xml.serializer.utils;uses:=\"org.w3c.dom,org.xml.sax,javax.xml.transform\";version=2.7.2, \
     org.apache.xml.serializer.dom3;uses:=\"org.apache.xml.serializer,org.w3c.dom.ls,org.apache.xml.serializer.utils,org.w3c.dom,org.xml.sax,org.xml.sax.ext,org.xml.sax.helpers\";version=2.7.2, \
+    javax.activation;version=${jakarta.activation.version}, \
     javax.annotation;version=${javax.annotation-api.version}, \
     javax.annotation.security;version=${javax.annotation-api.version}, \
     javax.annotation.sql;version=${javax.annotation-api.version}, \
