--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -132,10 +132,10 @@ org.codice.ddf.system.threadPoolSize=128
 # java.security.manager=net.sourceforge.prograde.sm.PolicyFileGeneratorJSM
 # proGrade.getPermissions.override=sun.rmi.server.LoaderHandler:loadClass,org.apache.jasper.compiler.JspRuntimeContext:initSecurity
 
-policy.provider=net.sourceforge.prograde.policy.ProGradePolicy
-java.security.manager=net.sourceforge.prograde.sm.ProGradeJSM
-java.security.policy==${karaf.etc}/all.policy
-proGrade.getPermissions.override=sun.rmi.server.LoaderHandler:loadClass,org.apache.jasper.compiler.JspRuntimeContext:initSecurity
+# policy.provider=net.sourceforge.prograde.policy.ProGradePolicy
+# java.security.manager=net.sourceforge.prograde.sm.ProGradeJSM
+# java.security.policy==${karaf.etc}/all.policy
+# proGrade.getPermissions.override=sun.rmi.server.LoaderHandler:loadClass,org.apache.jasper.compiler.JspRuntimeContext:initSecurity
 
 
 #
