--- a/platform/admin/ui/pom.xml
+++ b/platform/admin/ui/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>branding-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>${jakarta.activation.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
