--- a/catalog/transformer/catalog-transformer-propertyjson-metacard/pom.xml
+++ b/catalog/transformer/catalog-transformer-propertyjson-metacard/pom.xml
@@ -51,6 +51,11 @@
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
