--- a/distribution/docs/pom.xml
+++ b/distribution/docs/pom.xml
@@ -196,9 +196,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>br.com.ingenieux</groupId>
+                <groupId>org.jbake</groupId>
                 <artifactId>jbake-maven-plugin</artifactId>
-                <version>${jbake.maven.plugin.version}</version>
+                <version>0.3.3</version>
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
@@ -215,7 +215,7 @@
                     <dependency>
                         <groupId>org.freemarker</groupId>
                         <artifactId>freemarker</artifactId>
-                        <version>2.3.23</version>
+                        <version>2.3.30</version>
                     </dependency>
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
@@ -225,7 +225,7 @@
                     <dependency>
                         <groupId>org.pegdown</groupId>
                         <artifactId>pegdown</artifactId>
-                        <version>1.4.2</version>
+                        <version>1.6.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
