--- a/distribution/kernel/pom.xml
+++ b/distribution/kernel/pom.xml
@@ -118,35 +118,35 @@
                                     <groupId>org.bouncycastle</groupId>
                                     <artifactId>bcprov-jdk15on</artifactId>
                                     <version>${bouncy.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>bcprov-${bouncy.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.bouncycastle</groupId>
                                     <artifactId>bcmail-jdk15on</artifactId>
                                     <version>${bouncy.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>bcmail-${bouncy.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.bouncycastle</groupId>
                                     <artifactId>bcpkix-jdk15on</artifactId>
                                     <version>${bouncy.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>bcpkix-${bouncy.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.codice.pro-grade</groupId>
                                     <artifactId>pro-grade</artifactId>
                                     <version>${pro-grade.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>pro-grade-${pro-grade.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>jakarta.annotation</groupId>
                                     <artifactId>jakarta.annotation-api</artifactId>
                                     <version>${javax.annotation-api.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>
                                         jakarta.annotation-api-${javax.annotation-api.version}.jar
                                     </destFileName>
@@ -155,7 +155,7 @@
                                     <groupId>com.google.code.findbugs</groupId>
                                     <artifactId>jsr305</artifactId>
                                     <version>${jsr305.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>
                                         jsr305-${jsr305.version}.jar
                                     </destFileName>
@@ -165,14 +165,14 @@
                                     <groupId>com.google.crypto.tink</groupId>
                                     <artifactId>tink</artifactId>
                                     <version>${tink.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>tink-${tink.version}.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.google.protobuf</groupId>
                                     <artifactId>protobuf-java</artifactId>
                                     <version>${protobuf.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>
                                         protobuf-java-${protobuf.version}.jar
                                     </destFileName>
@@ -181,7 +181,7 @@
                                     <groupId>org.json</groupId>
                                     <artifactId>json</artifactId>
                                     <version>${org.json.version}</version>
-                                    <outputDirectory>${setup.folder}/ext</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                     <destFileName>json-${org.json.version}.jar</destFileName>
                                 </artifactItem>
                                 <!-- End crypter dependencies -->
@@ -244,20 +244,20 @@
                                     <groupId>org.apache.servicemix.bundles</groupId>
                                     <artifactId>org.apache.servicemix.bundles.xerces</artifactId>
                                     <version>${xerces.bundle.version}</version>
-                                    <outputDirectory>${setup.folder}/endorsed</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.apache.servicemix.specs</groupId>
                                     <artifactId>org.apache.servicemix.specs.saaj-api-1.3</artifactId>
                                     <version>${servicemix.specs.version}</version>
-                                    <outputDirectory>${setup.folder}/endorsed</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                 </artifactItem>
                                 <!-- Can't use servicemix bundle because of https://issues.apache.org/jira/browse/SM-4352 -->
                                 <artifactItem>
                                     <groupId>jakarta.activation</groupId>
                                     <artifactId>jakarta.activation-api</artifactId>
                                     <version>${jakarta.activation.version}</version>
-                                    <outputDirectory>${setup.folder}/endorsed</outputDirectory>
+                                    <outputDirectory>${setup.folder}/jdk9plus</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
