--- a/platform/mime/core/platform-mime-core-api/pom.xml
+++ b/platform/mime/core/platform-mime-core-api/pom.xml
@@ -22,6 +22,13 @@
     <artifactId>mime-core-api</artifactId>
     <name>DDF :: MIME :: Core :: MIME API</name>
     <packaging>bundle</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>${jakarta.activation.version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
