--- a/platform/parser/api/pom.xml
+++ b/platform/parser/api/pom.xml
@@ -22,6 +22,13 @@
     <artifactId>platform-parser-api</artifactId>
     <name>DDF :: Platform :: Parser :: API</name>
     <packaging>bundle</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
