--- a/platform/security/pdp/security-pdp-authzrealm/pom.xml
+++ b/platform/security/pdp/security-pdp-authzrealm/pom.xml
@@ -105,6 +105,11 @@
             <groupId>ddf.security.core</groupId>
             <artifactId>security-core-impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakarta.xml.bind.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
