--- a/platform/solr/solr-query/pom.xml
+++ b/platform/solr/solr-query/pom.xml
@@ -101,5 +101,10 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ddf.catalog.core</groupId>
+            <artifactId>catalog-core-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
