Fix component tests

--- a/catalog/rest/catalog-rest-endpoint/src/test/resources/custom.properties
+++ b/catalog/rest/catalog-rest-endpoint/src/test/resources/custom.properties
@@ -6,3 +6,5 @@ org.osgi.framework.system.packages.extra = \
     javax.annotation;version=${jsr305.version}, \
     javax.annotation.concurrent;version=${jsr305.version}, \
     javax.annotation.meta;version=${jsr305.version}
+
+pax.exam.invoker = junit
