--- a/features/cxf/pom.xml
+++ b/features/cxf/pom.xml
@@ -25,6 +25,11 @@
     <packaging>feature</packaging>
     <dependencies>
         <dependency>
+            <groupId>jakarta.xml.soap</groupId>
+            <artifactId>jakarta.xml.soap-api</artifactId>
+            <version>${soap-api.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.platform</groupId>
             <artifactId>sync-installer-api</artifactId>
             <version>${project.version}</version>
