--- a/distribution/test/itests/test-itests-ddf-core/pom.xml
+++ b/distribution/test/itests/test-itests-ddf-core/pom.xml
@@ -230,7 +230,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>-Dddf.version=${project.version} -noverify</argLine>
+                    <includes>
+                        <include>**/*IT.java</include>
+                    </includes>
+                    <argLine>
+                        -Dddf.version=${project.version}
+                        -Djava.awt.headless=true
+                        -noverify
+                    </argLine>
                 </configuration>
                 <executions>
                     <execution>
