--- a/features/test-utilities/pom.xml
+++ b/features/test-utilities/pom.xml
@@ -30,9 +30,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.thirdparty</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>${project.version}</version>
+            <version>4.3.3</version>
         </dependency>
 
         <dependency>
