--- a/libs/test-common/pom.xml
+++ b/libs/test-common/pom.xml
@@ -159,13 +159,13 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.framework</artifactId>
-            <version>5.6.0</version>
+            <version>6.0.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>2.1.0</version>
+            <version>3.18.1</version>
         </dependency>
         <dependency>
             <groupId>ddf.lib</groupId>
@@ -212,6 +212,7 @@
                         <Import-Package>
                             !org.ops4j.pax.exam.container.remote,
                             !org.ops4j.pax.exam.rbc.client,
+                            org.junit.*,
                             *;resolution:=optional
                         </Import-Package>
                         <Export-Package>
