Fix test-itests-ddf-core tests

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
@@ -67,6 +67,7 @@ org.osgi.framework.system.packages.extra = \
     org.apache.karaf.branding, \
     sun.misc, \
     sun.reflect, \
+    jdk.internal.reflect, \
     javax.crypto, \
     javax.crypto.spec, \
     javax.xml.stream;uses:=\"javax.xml.namespace,javax.xml.stream.events,javax.xml.stream.util,javax.xml.transform\";version=1.2, \
@@ -389,6 +390,8 @@ org.osgi.framework.bootdelegation = \
     javax.xml.crypto, \
     javax.xml.crypto.*, \
     jdk.nashorn.*, \
+    jdk.internal.reflect, \
+    jdk.internal.reflect.*, \
     sun.*, \
     org.apache.html.dom, \
     org.apache.wml.dom, \
