--- a/distribution/test/itests/test-itests-common/pom.xml
+++ b/distribution/test/itests/test-itests-common/pom.xml
@@ -197,6 +197,11 @@
                         <Bundle-Name>${project.name}</Bundle-Name>
                         <Import-Package>
                             org.junit.*,
+                            org.hamcrest.*,
+                            org.awaitility.*,
+                            com.google.common.*,
+                            io.restassured.*,
+                            org.apache.commons.*;
                             *;resolution:=optional
                         </Import-Package>
                         <Export-Package>
