--- a/features/test-utilities/pom.xml
+++ b/features/test-utilities/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.3.3</version>
+            <version>${restassured.version}</version>
         </dependency>
 
         <dependency>
