--- a/distribution/test/itests/pom.xml
+++ b/distribution/test/itests/pom.xml
@@ -49,9 +49,9 @@
             <dependencyManagement>
                 <dependencies>
                     <dependency>
-                        <groupId>ddf.thirdparty</groupId>
+                        <groupId>io.rest-assured</groupId>
                         <artifactId>rest-assured</artifactId>
-                        <version>${project.version}</version>
+                        <version>${restassured.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>org.ops4j.pax.tinybundles</groupId>
@@ -134,9 +134,9 @@
                     <scope>test</scope>
                 </dependency>
                 <dependency>
-                    <groupId>ddf.thirdparty</groupId>
+                    <groupId>io.rest-assured</groupId>
                     <artifactId>rest-assured</artifactId>
-                    <version>${project.version}</version>
+                    <version>${restassured.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>com.google.guava</groupId>
