--- a/platform/platform-paxweb-jettyconfig/pom.xml
+++ b/platform/platform-paxweb-jettyconfig/pom.xml
@@ -67,9 +67,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>ddf.thirdparty</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>${project.version}</version>
+            <version>${restassured.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ops4j.pax.web</groupId>
