Upgrade to Karaf 4.3.0

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.properties
@@ -147,6 +147,8 @@ org.osgi.framework.system.packages.extra = \
     javax.annotation;version=${jsr305.version}, \
     javax.annotation.concurrent;version=${jsr305.version}, \
     javax.annotation.meta;version=${jsr305.version}, \
+    javax.json, \
+    javax.json.stream, \
     java_cup.runtime;version=2.7.2, \
     org.apache.xalan;version=2.7.2, \
     org.apache.xalan.xslt;uses:=\"org.w3c.dom,org.xml.sax,org.apache.xalan,org.xml.sax.helpers,javax.xml.transform.sax,org.apache.xalan.res,org.apache.xml.utils,org.apache.xalan.transformer,javax.xml.transform.dom,javax.xml.parsers,javax.xml.transform,org.apache.xalan.trace,javax.xml.transform.stream\";version=2.7.2, \
