--- a/platform/security/handler/security-handler-impl/pom.xml
+++ b/platform/security/handler/security-handler-impl/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
