--- a/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/startup.properties
@@ -9,11 +9,18 @@ mvn\:org.fusesource.jansi/jansi/1.18 = 8
 mvn\:org.ops4j.pax.logging/pax-logging-api/${pax.logging.version}=8
 mvn\:org.ops4j.pax.logging/pax-logging-log4j2/${pax.logging.version}=8
 mvn\:org.apache.felix/org.apache.felix.coordinator/${felix.coordinator.version} = 9
+mvn\:org.osgi/org.osgi.util.promise/1.0.0 = 9
+mvn\:org.apache.felix/org.apache.felix.converter/1.0.14 = 9
+mvn\:org.osgi/org.osgi.util.function/1.0.0 = 9
 # These two osgi bundles need to start before configadmin in order to register
 # DDF's custom PersistenceManager.
 mvn\:ddf.platform.osgi/platform-osgi-internal-api/${project.version}=9
 mvn\:ddf.platform.osgi/platform-osgi-configadmin/${project.version}=10
+mvn\:org.apache.felix/org.apache.felix.configadmin.plugin.interpolation/1.1.0 = 11
+mvn\:org.apache.felix/org.apache.felix.configurator/1.0.12 = 11
+mvn\:org.apache.felix/org.apache.felix.cm.json/1.0.2 = 11
 mvn\:org.apache.felix/org.apache.felix.configadmin/${felix.configadmin.version}=11
+mvn\:org.apache.sling/org.apache.sling.commons.johnzon/1.2.6 = 11
 mvn\:org.apache.felix/org.apache.felix.fileinstall/${felix.fileinstall.version}=12
 mvn\:org.apache.servicemix.specs/org.apache.servicemix.specs.jaxb-api-2.3/${servicemix.specs.jaxb.version}=13
 mvn\:org.apache.servicemix.bundles/org.apache.servicemix.bundles.jaxb-runtime/${servicemix.bundles.jaxb.version}=14
