--- a/platform/security/security-saml-util/pom.xml
+++ b/platform/security/security-saml-util/pom.xml
@@ -36,6 +36,14 @@
             <groupId>ddf.platform.util</groupId>
             <artifactId>platform-util</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.wss4j</groupId>
+            <artifactId>wss4j-ws-security-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-core</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
