--- a/catalog/spatial/geocoding/spatial-geocoding-offline-catalog/pom.xml
+++ b/catalog/spatial/geocoding/spatial-geocoding-offline-catalog/pom.xml
@@ -178,6 +178,7 @@
                         </Embed-Dependency>
                         <Import-Package>
                             !com.fasterxml.jackson*,
+                            !org.noggit*,
                             *
                         </Import-Package>
                     </instructions>
