--- a/platform/solr/solr-dependencies/pom.xml
+++ b/platform/solr/solr-dependencies/pom.xml
@@ -64,7 +64,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.6</version>
+            <version>2.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -97,6 +97,21 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper-jute</artifactId>
+            <version>${solr.zookeeper.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.github.spotbugs</groupId>
+                    <artifactId>spotbugs-annotations</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>org.locationtech.spatial4j</groupId>
             <artifactId>spatial4j</artifactId>
             <version>0.7</version>
@@ -106,11 +121,13 @@
             <artifactId>jts-core</artifactId>
             <version>${jts.spatial4j.version}</version>
         </dependency>
+        <!--
         <dependency>
             <groupId>org.noggit</groupId>
             <artifactId>noggit</artifactId>
             <version>${solr.noggit.version}</version>
         </dependency>
+        -->
     </dependencies>
     <build>
         <plugins>
@@ -127,7 +144,7 @@
                             org.apache.solr.client.solrj.*;version=${solr.version},
                             org.apache.solr.common.*;version=${solr.version},
                             org.apache.zookeeper.*;version=${solr.zookeeper.version},
-                            org.noggit;version=${solr.noggit.version},
+                            com.fasterxml.jackson.*;version=${jackson.version},
 
                             <!-- used by solr-factory implementation -->
                             org.apache.solr.client.solrj.embedded;version=${solr.version},
@@ -158,8 +175,8 @@
                             solr-solrj,
                             commons-io,
                             httpmime,
-                            noggit,
                             zookeeper,
+                            zookeeper-jute,
                             spatial4j,
                             jts-core,
                             lux
