--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
         <jboss-logging.version>3.3.1.Final</jboss-logging.version>
         <jcodec.version>0.2.0_1</jcodec.version>
         <jdom.bundle.version>1.1_4</jdom.bundle.version>
-        <jetty.solr.version>9.4.14.v20181114</jetty.solr.version>
+        <jetty.solr.version>9.4.34.v20201102</jetty.solr.version>
         <jetty.version>9.4.18.v20190429</jetty.version>
         <jgroups.version>3.6.13.Final</jgroups.version>
         <joda-convert.version>1.7</joda-convert.version>
@@ -245,7 +245,7 @@
         <karaf.version>4.2.6</karaf.version>
         <la4j.version>0.6.0</la4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <apache-log4j.version>2.11.0</apache-log4j.version>
+        <apache-log4j.version>2.11.2</apache-log4j.version>
         <logback.classic.version>1.2.3</logback.classic.version>
         <logback.version>1.2.3</logback.version>
         <lucene.version>7.7.2</lucene.version>
@@ -291,11 +291,12 @@
         <servicemix-json-1.1.spec.version>2.9.0</servicemix-json-1.1.spec.version>
         <servicemix.specs.version>2.9.0</servicemix.specs.version>
         <servlet-api.version>3.1.0</servlet-api.version>
-        <solr.version>7.7.2</solr.version>
-        <solr.httpclient.version>4.5.6</solr.httpclient.version>
-        <solr.httpcore.version>4.4.10</solr.httpcore.version>
-        <solr.zookeeper.version>3.4.14</solr.zookeeper.version>
-        <solr.noggit.version>0.8</solr.noggit.version>
+        <solr.version>8.8.1</solr.version>
+        <solr.httpclient.version>4.5.12</solr.httpclient.version>
+        <solr.httpcore.version>4.4.13</solr.httpcore.version>
+        <solr.httpmime.version>4.5.12</solr.httpmime.version>
+        <solr.log4j.version>2.13.2</solr.log4j.version>
+        <solr.zookeeper.version>3.6.2</solr.zookeeper.version>
         <solr.spatial4j.version>0.7</solr.spatial4j.version>
 
         <spark.version>2.5.5</spark.version>
@@ -327,6 +328,9 @@
         <tink.version>1.2.2</tink.version>
         <org.json.version>20170516</org.json.version>
         <ehcache.version>2.10.6</ehcache.version>
+
+        <!-- temporary solr download url -->
+        <solr.download.url>https://archive.apache.org/dist</solr.download.url>
     </properties>
     <!--
     NOTE: The properties ddf.scm.connection.url, snapshots.repository.url and releases.repository.url should be defined
