G-9814 add validation config option

--- a/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config
+++ b/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config
@@ -74,3 +74,4 @@ autoMergeTime=I"16"
 spellcheckEnabled=B"false"
 phoneticsEnabled=B"false"
 metacardPreviewEnabled=B"true"
+clientValidationEnabled=B"true"
