[2.19.x] G-8428 Refactored Logout Redirect

--- a/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config
+++ b/catalog/ui/search-ui-app/src/main/resources/etc/org.codice.ddf.catalog.ui.config
@@ -70,6 +70,7 @@ uiName="Intrigue"
 relevanceScoresEnabled=B"false"
 relevancePrecision=I"5"
 logoEnabled=B"false"
+logoutUrl=""
 autoMergeTime=I"16"
 spellcheckEnabled=B"false"
 phoneticsEnabled=B"false"
